[package]
name = "m13-cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
m13-core = { path = "../m13-core" }
zeroize = { version = "1.7", features = ["derive"] }
# The IETF Standard (RFC 8439) implementation.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }