[package]
name = "m13-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
m13-core = { path = "../m13-core" }
m13-hal = { path = "../m13-hal" }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.7", features = ["derive"] }

# Note: 'extern crate alloc' belongs in lib.rs.