[package]
name = "m13-store"
version = "0.1.0"
edition = "2021"

[dependencies]
m13-core = { path = "../m13-core" }
m13-aont = { path = "../m13-aont" }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.7", features = ["derive", "alloc"] }

# Note: 'extern crate alloc' belongs in lib.rs.

[features]
default = ["std"]
std = []

[dev-dependencies]
# FIX: Enable 'getrandom' and 'std' for tests to access OsRng
rand_core = { version = "0.6", features = ["std", "getrandom"] }